<resources>
    <string name="app_name">GameStorm</string>
    <string name="urlAPI" translatable="false">https://api.igdb.com/v4/</string>
    <string name="clientID" translatable="false">w70u2nsn2gzl9g0xsbe3uvguva3zos</string>
    <string name="tokenAPI" translatable="false">Bearer sevk2qpth8qd683kwwl5e67m66t5ws</string>
    <string name="contentType" translatable="false">application/json;charset=utf-8</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_game" translatable="false">GameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="large_text" translatable="false">ops</string>
    <string name="rating">Rating</string>
    <string name="reviews">Reviews</string>
    <string name="wanted">Wanted</string>
    <string name="played">Played</string>
    <string-array name="genres">
        <item>Any genre</item>
        <item>Fighting</item>
        <item>Shooter</item>
        <item>Music</item>
        <item>Platform</item>
        <item>Puzzle</item>
        <item>Racing</item>
        <item>Real Time Strategy (RTS)</item>
        <item>Role-playing (RPG)</item>
        <item>Simulator</item>
        <item>Sport</item>
        <item>Strategy</item>
        <item>Turn-based strategy (TBS)</item>
        <item>Tactical</item>
        <item>Quiz/Trivia</item>
        <item>Hack and slash/Beat \'em up</item>
        <item>Pinball</item>
        <item>Adventure</item>
        <item>Arcade</item>
        <item>Visual Novel</item>
        <item>Indie</item>
        <item>Card &amp; Board Game</item>
        <item>MOBA</item>
        <item>Point-and-click</item>
    </string-array>
    <string-array name="platforms">
        <item>Any platform</item>
        <item>Commodore CDTV</item>
        <item>Sega Pico</item>
        <item>PlayStation 2</item>
        <item>iOS</item>
        <item>Commodore Plus/4</item>
        <item>AY-3-8710</item>
        <item>Odyssey</item>
        <item>Commodore PET</item>
        <item>Sol-20</item>
        <item>PC (Microsoft Windows)</item>
        <item>Tapwave Zodiac</item>
        <item>ColecoVision</item>
        <item>PlayStation VR</item>
        <item>Texas Instruments TI-99</item>
        <item>Acorn Electron</item>
        <item>Gamate</item>
        <item>Hyper Neo Geo 64</item>
        <item>Thomson MO5</item>
        <item>Odyssey 2 / Videopac G7000</item>
        <item>SteamVR</item>
        <item>PC-50X Family</item>
        <item>AY-3-8607</item>
        <item>AY-3-8605</item>
        <item>AY-3-8606</item>
        <item>PC-98</item>
        <item>Amstrad CPC</item>
        <item>Playdate</item>
        <item>Family Computer Disk System</item>
        <item>WonderSwan Color</item>
        <item>Neo Geo CD</item>
        <item>Sega Game Gear</item>
        <item>Atari Jaguar</item>
        <item>3DO Interactive Multiplayer</item>
        <item>Microvision</item>
        <item>PC Engine SuperGrafx</item>
        <item>Turbografx-16/PC Engine CD</item>
        <item>Dreamcast</item>
        <item>Atari 8-bit</item>
        <item>Vectrex</item>
        <item>Donner Model 30</item>
        <item>PDP-8</item>
        <item>DEC GT40</item>
        <item>Microcomputer</item>
        <item>Ferranti Nimrod Computer</item>
        <item>Apple IIGS</item>
        <item>DOS</item>
        <item>SwanCrystal</item>
        <item>Fairchild Channel F</item>
        <item>PC-8801</item>
        <item>Virtual Boy</item>
        <item>TRS-80</item>
        <item>Nintendo Switch</item>
        <item>Amazon Fire TV</item>
        <item>VC 4000</item>
        <item>1292 Advanced Programmable Video System</item>
        <item>Tatung Einstein</item>
        <item>Nintendo DSi</item>
        <item>Neo Geo Pocket</item>
        <item>Dragon 32/64</item>
        <item>Amstrad PCW</item>
        <item>Xbox</item>
        <item>PDP-11</item>
        <item>Virtual Console (Nintendo)</item>
        <item>MSX2</item>
        <item>Atari 7800</item>
        <item>Sega CD</item>
        <item>Game Boy Advance</item>
        <item>Sega 32X</item>
        <item>AY-3-8500</item>
        <item>AY-3-8760</item>
        <item>AY-3-8603</item>
        <item>Nintendo 64</item>
        <item>Neo Geo Pocket Color</item>
        <item>Wii U</item>
        <item>Sharp X1</item>
        <item>Web browser</item>
        <item>CDC Cyber 70</item>
        <item>OnLive Game System</item>
        <item>Acorn Archimedes</item>
        <item>Amiga CD32</item>
        <item>Philips CD-i</item>
        <item>Sharp X68000</item>
        <item>Nuon</item>
        <item>Nintendo Entertainment System</item>
        <item>AY-3-8610</item>
        <item>Nintendo 3DS</item>
        <item>Game Boy Color</item>
        <item>Sega Master System/Mark III</item>
        <item>Amiga</item>
        <item>PlayStation Portable</item>
        <item>TurboGrafx-16/PC Engine</item>
        <item>Oculus VR</item>
        <item>Playdia</item>
        <item>PlayStation 3</item>
        <item>Mac</item>
        <item>Satellaview</item>
        <item>Sega Saturn</item>
        <item>Android</item>
        <item>Commodore C64/128/MAX</item>
        <item>Atari 5200</item>
        <item>Intellivision</item>
        <item>BlackBerry OS</item>
        <item>Game &amp; Watch</item>
        <item>Imlac PDS-1</item>
        <item>FM Towns</item>
        <item>Nintendo PlayStation</item>
        <item>NEC PC-6000 Series</item>
        <item>FM-7</item>
        <item>Nintendo DS</item>
        <item>Atari ST/STE</item>
        <item>PlayStation Vita</item>
        <item>PlayStation 4</item>
        <item>Atari Lynx</item>
        <item>Commodore 16</item>
        <item>Nintendo GameCube</item>
        <item>N-Gage</item>
        <item>Super Nintendo Entertainment System</item>
        <item>Sharp MZ-2200</item>
        <item>Super Famicom</item>
        <item>Epoch Cassette Vision</item>
        <item>Gear VR</item>
        <item>PDP-10</item>
        <item>Arcade</item>
        <item>New Nintendo 3DS</item>
        <item>Plug &amp; Play</item>
        <item>WonderSwan</item>
        <item>Commodore VIC-20</item>
        <item>Apple II</item>
        <item>Windows Phone</item>
        <item>Neo Geo AES</item>
        <item>SG-1000</item>
        <item>Windows Mixed Reality</item>
        <item>Neo Geo MVS</item>
        <item>Game Boy</item>
        <item>Epoch Super Cassette Vision</item>
        <item>Wii</item>
        <item>Intellivision Amico</item>
        <item>Google Stadia</item>
        <item>PlayStation 5</item>
        <item>Oculus Go</item>
        <item>Oculus Rift</item>
        <item>Bally Astrocade</item>
        <item>Oculus Quest</item>
        <item>BBC Microcomputer System</item>
        <item>Legacy Mobile Device</item>
        <item>Game.com</item>
        <item>Linux</item>
        <item>Ouya</item>
        <item>PDP-1</item>
        <item>TRS-80 Color Computer</item>
        <item>Analogue electronics</item>
        <item>Pokémon mini</item>
        <item>EDSAC</item>
        <item>HP 2100</item>
        <item>Exidy Sorcerer</item>
        <item>PDP-7</item>
        <item>DVD Player</item>
        <item>HP 3000</item>
        <item>SDS Sigma 7</item>
        <item>Daydream</item>
        <item>Call-A-Computer time-shared mainframe computer system</item>
        <item>Zeebo</item>
        <item>PLATO</item>
        <item>Blu-ray Player</item>
        <item>ZX Spectrum</item>
        <item>PC-FX</item>
        <item>MSX</item>
        <item>Evercade</item>
        <item>OOParts</item>
        <item>Sinclair ZX81</item>
        <item>DUPLICATE Stadia</item>
        <item>Casio Loopy</item>
        <item>Xbox Series X|S</item>
        <item>Atari 2600</item>
        <item>Xbox 360</item>
        <item>Xbox One</item>
        <item>PlayStation</item>
        <item>Family Computer</item>
        <item>AirConsole</item>
        <item>PlayStation VR2</item>
        <item>Windows Mobile</item>
        <item>Legacy Computer</item>
        <item>Sinclair QL</item>
        <item>Handheld Electronic LCD</item>
        <item>Leapster Explorer/LeadPad Explorer</item>
        <item>Nintendo 64DD</item>
        <item>HyperScan</item>
        <item>Palm OS</item>
        <item>Mega Duck/Cougar Boy</item>
        <item>Atari Jaguar CD</item>
        <item>Watara/QuickShot Supervision</item>
        <item>LeapTV</item>
        <item>Leapster</item>
        <item>Arduboy</item>
        <item>V.Smile</item>
        <item>Visual Memory Unit / Visual Memory System</item>
        <item>PocketStation</item>
        <item>Sega Mega Drive/Genesis</item>
        <item>Meta Quest 2</item>
    </string-array>
    <string name="franchise">FRANCHISE</string>
    <string name="description">Description</string>
    <string name="company">COMPANY</string>
    <string name="gameCover">Game\'s cover</string>
    <string name="Unreleased">Unreleased</string>
    <string name="related_games">Related Games</string>
    <string name="no_results">No results :(</string>
    <string name="no_connection">No connection :(</string>
    <string name="popular">Popular</string>
    <string name="bestgames">Best games</string>
    <string name="foryou">For you</string>
    <string name="latestreleases">Latest releases</string>
    <string name="incoming">Incoming</string>
    <string name="loginHome">You must be logged to view suggested games</string>
    <string name="loginPlayedGame">You must add at least one game in the "Played" section</string>
    <string name="title_activity_category" translatable="false">CategoryActivity</string>
    <string name="gameNoGenre">You have entered a game with no genre</string>
    <string name="videogame_saga" translatable="false">Videogame saga</string>
    <string name="title_activity_game_saga" translatable="false">GameSagaActivity</string>
    <string name="title_activity_game_version" translatable="false">GameVersionActivity</string>
    <string name="error_retrieving_games">\"error_retrieving_games</string>
    <string name="username" translatable="false">Username</string>
    <string name="emailAddress">Email Address</string>
    <string name="password" translatable="false">Password</string>
    <string name="signupnow">Don\'t have an account? Sign Up Now</string>
    <string name="login" translatable="false">Login</string>
    <string name="reset_password">Forgot your password?</string>
    <string name="or">OR</string>
    <string name="haveAccount">Already registered?</string>
    <string name="insert_mail_to_reset_password">To reset your password, enter your email</string>
    <string name="emailsent">Email sent. Check your spam folder</string>
    <string name="check_data">Check the data you inserted</string>
    <string name="sending_mail">Sending Mail...</string>
    <string name="email_empty">Email can\'t be empty</string>
    <string name="password_empty">Password can\'t be empty</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="login_in_progress" translatable="false">Login...</string>
    <string name="username_empty">Username can\'t be empty</string>
    <string name="desired">Desired</string>
    <string name="playing">Playing</string>
    <string name="playeds">Played</string>
    <string name="login_to_see_this">This function is available only for registered users</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="logout_successfully">Logout Successfully</string>
    <string name="settings">Settings</string>
    <string name="logout_in_progress" translatable="false">Logout...</string>
    <string name="sign_up">Sign Up</string>
    <string name="explore_title">Explore</string>
    <string name="sort_by_dialog_title">Sort by</string>
</resources>