<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20sp"
    android:paddingStart="50dp"
    android:paddingEnd="50sp"
    tools:context=".ui.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/username"
            android:fontFamily="@font/poppins_regular"
            android:textCursorDrawable="@drawable/cursor_color"
            android:inputType="textEmailAddress"
            android:padding="17dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailAddressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/emailAddress"
            android:fontFamily="@font/poppins_regular"
            android:textCursorDrawable="@drawable/cursor_color"
            android:inputType="textEmailAddress"
            android:padding="17dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:fontFamily="@font/poppins_regular"
            android:textCursorDrawable="@drawable/cursor_color"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="17dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/blue_fill__rounded_color"
        android:fontFamily="@font/poppins_regular"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="250dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/haveAccount"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/goToLoginActivity"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/goToLoginActivity"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginStart="92dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>